--- a/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
+++ b/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="upv.locamo.tfg.smarthome.app" >
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -37,8 +36,7 @@
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
-            android:name="upv.locamo.tfg.smarthome.app.LogoutActivity"
-            android:label="@string/title_activity_logout" >
+            android:name="upv.locamo.tfg.smarthome.app.LogoutActivity">
         </activity>
     </application>
 
