--- a/TFG-SmarthomeAPP/app/build.gradle
+++ b/TFG-SmarthomeAPP/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '19.1.0'
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 12
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -19,8 +19,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:19.1.0'
     compile 'com.android.support:gridlayout-v7:+'
+    compile 'com.google.android.gms:play-services:3.2.25'
+    compile 'com.android.support:support-v4:+'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/org.restlet.ext.json.jar')
     compile files('libs/org.restlet.jar')
