--- a/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
+++ b/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- OpenGL ES v2 to rendering maps -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -36,8 +43,17 @@
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
+        <activity android:name="upv.locamo.tfg.smarthome.app.LogoutActivity" >
+        </activity>
+
+        <!-- Google Maps -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCZMVJI1y0dpmXoEq-l6pvFbiRKJ_AZs2c" />
+
         <activity
-            android:name="upv.locamo.tfg.smarthome.app.LogoutActivity">
+            android:name="upv.locamo.tfg.smarthome.app.RoomsListActivity"
+            android:label="@string/title_activity_rooms_list" >
         </activity>
     </application>
 
