--- a/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
+++ b/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
@@ -45,15 +45,19 @@
         </activity>
         <activity android:name="upv.locamo.tfg.smarthome.app.LogoutActivity" >
         </activity>
+        <activity
+            android:name="upv.locamo.tfg.smarthome.app.ShoppingListActivity"
+            android:label="@string/shoppingList" >
+        </activity>
 
         <!-- Google Maps -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCZMVJI1y0dpmXoEq-l6pvFbiRKJ_AZs2c" />
+            android:value="AIzaSyBOnaVVYp1eo8Yi5PkwOhR8X3oBNAKD0rQ" />
 
         <activity
-            android:name="upv.locamo.tfg.smarthome.app.RoomsListActivity"
-            android:label="@string/title_activity_rooms_list" >
+            android:name="upv.locamo.tfg.smarthome.app.ExamplePlacesActivity"
+            android:label="@string/title_activity_example_places" >
         </activity>
     </application>
 
