--- a/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
+++ b/TFG-SmarthomeAPP/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <!-- OpenGL ES v2 to rendering maps -->
     <uses-feature
@@ -55,10 +56,6 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBOnaVVYp1eo8Yi5PkwOhR8X3oBNAKD0rQ" />
 
-        <activity
-            android:name="upv.locamo.tfg.smarthome.app.ExamplePlacesActivity"
-            android:label="@string/title_activity_example_places" >
-        </activity>
     </application>
 
 </manifest>
